syntax = "proto3";

option csharp_namespace = "GeekShopping.Shared.Protos";

package product;

service ProductService {
    rpc GetAllProductsById (GetAllProductsByIdRequest) returns (stream Product);
}

message GetAllProductsByIdRequest {
    repeated string id = 1;
}

message Product {
    string id = 1;
    string name = 2;
    double price = 3;
    string description = 4;
    string categoryName = 5;
    string imageUrl = 6;
}